# -*- makefile -*-
#
# See the LICENSE file in the top level directory for license
# information

AUTOMAKE_OPTIONS	= foreign dist-tarZ no-dependencies

SUBDIRS = protomol-app\
liteprotomol-app
#coulomb-app\
#dcd2dcd-app\
#coords2coords-app\
#xyzviz-app\
#iSGProtomol-app\
#oSGProtomol-app\
#mdEnergy-app\
#rem-app\
#amber2protomol-app\
#scpenergy-app


include $(top_srcdir)/Makefile.depend
